--- a/style.css
+++ b/style.css
@@ -39,28 +39,26 @@ section {
 .banner {
   position: relative;
   text-align: center;
-  background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-              url('https://images.unsplash.com/photo-1492684223066-81342ee5ff30?auto=format&fit=crop&w=1360&q=80')
-              center/cover no-repeat;
-  color: white;
-  padding: 140px 20px;
+  background: url("F:/Web design assignment/banner.jpg") center/cover;
+  color:	#FFD300;
+  padding: 120px 20px;
   border-radius: 0.5;
 }
 
 .banner-content {
-  max-width: 700px;
+  max-width: 900px;
   margin: auto;
 }
 
 .banner h2 {
-  font-size: 2.8rem;
-  margin-bottom: 10px;
+  font-size: 50px;
+  margin-bottom: 50px;
   font-weight: bold;
 }
 
 .banner p {
-  font-size: 1.3rem;
-  margin-bottom: 25px;
+  font-size: 28px;
+  margin-bottom: 60px;
 }
 
 .banner .btn {
